--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,26 @@
 <%- include('./partials/head') %>
 
-<article>
-  <header>
-    <h1>Hallo</h1>
-    <p>mijn naam is</p>
-  </header>
 
-  <p><%= data.name %></p>
+<!DOCTYPE html>
+<html lang="nl">
 
-  <footer></footer>
-</article>
+<body>
+  <div class="background-image"></div>
+  <section class="card-frame">
+    <!-- GRID -->
+    <div class="card">
+      <div class="written-content">
+        <header class="large-header">Alisa</header>
+        <header class="medium-header">Afanasieva</header>
+        <p class="large-par">web designer / web developer</p>
+        <div class="contact">
+          <p class="small-par">+31 6 39032244</p>
+            <p class="small-par">alice.afanasieva@gmail.com</p>  
+        </div>
+      </div>
+      <img src="../images/kitty.png"/>
+    </div>    
+  </section>
+
 
 <%- include('./partials/foot') %>
