--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,16 +9,22 @@
   <section class="card-frame">
     <!-- GRID -->
     <div class="card">
-      <div class="written-content">
-        <header class="large-header">Alisa</header>
-        <header class="medium-header">Afanasieva</header>
-        <p class="large-par">web designer / web developer</p>
-        <div class="contact">
-          <p class="small-par">+31 6 39032244</p>
-            <p class="small-par">alice.afanasieva@gmail.com</p>  
+      <div class="card-inner">
+        <div class="card-face--front">
+          <div class="written-content">
+            <header class="large-header">Alisa</header>
+            <header class="medium-header">Afanasieva</header>
+            <p class="large-par">web designer / web developer</p>
+            <div class="contact">
+              <p class="small-par">+31 6 39032244</p>
+              <p class="small-par">alice.afanasieva@gmail.com</p>  
+            </div>
+          </div>
+          <img src="../images/kitty.png" alt="illustratie"/>
         </div>
-      </div>
-      <img src="../images/kitty.png"/>
+        <div class="card-face--back">
+          <p class="small-par">informatie op de achterkant</p>
+        </div>
     </div>    
   </section>
 
