--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -35,7 +35,7 @@
 .card {
   width: 45rem;
   height: 26rem;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   display: grid;
   grid-template-columns: 60% 1fr;
   box-shadow: 3px 3px 7px 0 #454545;
