changes test undone

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
               <p class="small-par">alice.afanasieva@gmail.com</p>  
             </div>
           </div>
-          <img src="../images/kitty.png" alt="illustratie"/>
+          <img src="../images/kitty.png"/>
         </div>
         <div class="card-face--back">
           <p class="small-par">informatie op de achterkant</p>
