--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
         <div class="card-face--back">
           <p class="small-par">informatie op de achterkant</p>
         </div>
+      </div>
     </div>    
   </section>
 
