--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,15 @@
   <section class="card-frame">
     <!-- GRID -->
     <div class="card">
+
       <div class="card-inner">
+
         <div class="card-face--front">
+
           <div class="written-content">
-            <header class="large-header">Alisa</header>
-            <header class="medium-header">Afanasieva</header>
+            <header class="large-header"> <%- name %> </header>
+            <header class="medium-header"> <%- surname %> </header>
+             </header>
             <p class="large-par">web designer / web developer</p>
             <div class="contact">
               <p class="small-par">+31 6 39032244</p>
@@ -21,11 +25,15 @@
             </div>
           </div>
           <img src="../images/kitty.png"/>
+
         </div>
+
         <div class="card-face--back">
-          <p class="small-par">informatie op de achterkant</p>
+          <p class="small-par"> <%- bio %> </p>
         </div>
+
       </div>
+
     </div>    
   </section>
 
