--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <%- include('./partials/head') %>
 
-
 <!DOCTYPE html>
 <html lang="nl">
 
@@ -9,11 +8,8 @@
   <section class="card-frame">
     <!-- GRID -->
     <div class="card">
-
       <div class="card-inner">
-
         <div class="card-face--front">
-
           <div class="written-content">
             <header class="large-header"> <%- name %> </header>
             <header class="medium-header"> <%- surname %> </header>
@@ -24,18 +20,13 @@
               <p class="small-par">alice.afanasieva@gmail.com</p>  
             </div>
           </div>
-          <img src="../images/kitty.png"/>
-
+          <img src="../images/kitty.png" alt="The designer's nickname in an illustration"/>
         </div>
-
         <div class="card-face--back">
           <p class="small-par"> <%- bio %> </p>
         </div>
-
       </div>
-
     </div>    
   </section>
-
 
 <%- include('./partials/foot') %>
