--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,6 +11,9 @@
 
 /* --- CUSTOM PROPERTIES --- */
 
+body {
+  font-size: 16px;
+}
 /* --- SETTING THE BACKGROUND IMAGE --- */
 
 .background-image {
@@ -47,42 +50,44 @@
 .written-content {
   display: grid;
   grid-template-rows: 20% 20% 20% 20% 20%;
-  grid-template-columns: 33.3% 33.3% 33.3%;
+  grid-template-columns: repeat(8, 3rem);
 }
 
-header {
+h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   text-transform: uppercase;
 }
 
-.written-content .large-header {
+.large-header {
   font-size: 85px;
   margin-top: -1.1rem;
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 9;
 }
 
-.written-content .medium-header {
+.medium-header {
   font-size: 60px;
   margin-top: -1rem;
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-end: 9;
 }
 
-.written-content .large-par {
+.card-face--front h2 {
   align-self: right;
   font-family: 'Fira Code';
+  font-size: 16px;
   text-transform: uppercase;
   font-weight: 600;
   grid-row-start: 3;
   grid-row-end: 4;
-  grid-column-start: 2;
-  grid-column-end: 5;
+  grid-column-start: 3;
+  grid-column-end: 9;
+  padding-left: 1rem;
 }
 
 .contact {
@@ -90,16 +95,15 @@ header {
   flex-wrap: wrap;
   gap: 1rem;
   margin-left: auto;
-  font-family: 'Fira Code';
   grid-row-start: 5;
   grid-row-end: 6;
-  grid-column-start: 2;
-  grid-column-end: 5;
-  margin-right: 2rem;
+  grid-column-start: 3;
+  grid-column-end: 9;
 }
 
-.contact .small-par{
+p {
   margin-left: auto;
+  font-family: 'Fira Code';
 }
 
 .contact :nth-child(1){
