--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,15 +1,30 @@
+
+/* --- FONTS --- */
+
 @font-face {
   font-family: 'Fira Code';
   src: url('../styles/FiraCode-VariableFont_wght.ttf');
 }
+
+/* --- CUSTOM PROPERTIES --- */
+
+:root {
+  --pink: #ff3279;
+  --lightpink: #ffabc8;
+  --green: #1ae72b;
+  --lightgreen: #c7fdbf;
+  --grey: #202020;
+  --lightgrey: #ddd;
+  --white: #fff;
+}
+
+/* --- ELEMENTS --- */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
-/* --- CUSTOM PROPERTIES --- */
 
 body {
   font-size: 16px;
@@ -27,24 +42,65 @@ body {
 
 .card-frame {
   position: fixed;
-  top: 50%;
+  top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  width: 45rem;
+  height: 35rem;
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(11, 1fr);
 }
 
-/* --- DESIGNING THE CARD --- */ 
+.pin-image--front .pin-image--back {
+  position: absolute; 
+  z-index: 100;
+  height: 100%;
+  width: 100%;
+  grid-row-start: 1;
+  grid-row-end: 5;
+  grid-column-start: 5;
+  grid-column-end: 8;
+}
+
+/* --- DESIGNING THE CARD BODY--- */ 
 
 .card {
-  width: 45rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 26rem;
   background-color: rgb(255, 255, 255);
 }
 
-.card-face--front {
+.card__inner {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+}
+
+.card__inner.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  overflow: hidden;
+  box-shadow: 3px 3px 7px 0 #454545;
+}
+
+.grid-front {
   display: grid;
   grid-template-columns: 60% 1fr;
-  box-shadow: 3px 3px 7px 0 #454545;
+}
+
+.card__face--back {
+  transform: rotateY(180deg);
 }
 
 .written-content {
@@ -77,7 +133,7 @@ h1 {
   grid-column-end: 9;
 }
 
-.card-face--front h2 {
+.card__face--front h2 {
   align-self: right;
   font-family: 'Fira Code';
   font-size: 16px;
@@ -114,4 +170,14 @@ p {
   width: 110%;
   height: 110%;
   margin: -1rem;
+}
+
+
+/* Mobile and Tablet */
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 767px) {
+
 }
