--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,13 +9,9 @@
 /* --- CUSTOM PROPERTIES --- */
 
 :root {
-  --pink: #ff3279;
-  --lightpink: #ffabc8;
-  --green: #1ae72b;
-  --lightgreen: #c7fdbf;
-  --grey: #202020;
-  --lightgrey: #ddd;
   --white: #fff;
+  --grey: #2f2f2f;
+  --black: #000000; 
 }
 
 /* --- ELEMENTS --- */
@@ -29,7 +25,8 @@
 body {
   font-size: 16px;
 }
-/* --- SETTING THE BACKGROUND IMAGE --- */
+
+/* --- IMAGES --- */
 
 .background-image {
   background-image: url('../images/background-visit-card.png');
@@ -38,68 +35,57 @@ body {
   height: 100vh;
 }
 
-/* --- THE CONTAINER WHERE THE CARD AND AN PIN OBJECT IS PLACED --- */
-
-.card-frame {
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 45rem;
-  height: 35rem;
-  display: grid;
-  grid-template-rows: repeat(10, 1fr);
-  grid-template-columns: repeat(11, 1fr);
-}
-
-.pin-image--front .pin-image--back {
-  position: absolute; 
-  z-index: 100;
-  height: 100%;
-  width: 100%;
-  grid-row-start: 1;
-  grid-row-end: 5;
-  grid-column-start: 5;
-  grid-column-end: 8;
+.kitty {
+  width: 110%;
+  height: 110%;
+  margin: -1rem;
 }
 
 /* --- DESIGNING THE CARD BODY--- */ 
 
 .card {
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  width: 45rem;
   height: 26rem;
-  background-color: rgb(255, 255, 255);
+  transform: translate(-50%, -50%);
+  perspective: 1111px;
 }
 
 .card__inner {
+  position: relative;
   width: 100%;
   height: 100%;
   cursor: pointer;
-  position: relative;
+  transition: transform 1s;
+  transform-style: preserve-3d;
 }
 
 .card__inner.is-flipped {
   transform: rotateY(180deg);
 }
 
+/* --- This makes a specific grid to place two sides of pin image on the card --- */
+
 .card__face {
   position: absolute;
   width: 100%;
   height: 100%;
+  box-shadow: 3px 3px 7px 0 var(--grey);
+  backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   overflow: hidden;
-  box-shadow: 3px 3px 7px 0 #454545;
 }
 
-.grid-front {
+.card__face--front {
+  background-color: var(--white);
   display: grid;
   grid-template-columns: 60% 1fr;
 }
 
 .card__face--back {
+  background-color: var(--white);
   transform: rotateY(180deg);
 }
 
@@ -108,6 +94,8 @@ body {
   grid-template-rows: 20% 20% 20% 20% 20%;
   grid-template-columns: repeat(8, 3rem);
 }
+
+/* --- Typography --- */
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
@@ -166,14 +154,8 @@ p {
   align-self: flex-end;
 }
 
-.card img{
-  width: 110%;
-  height: 110%;
-  margin: -1rem;
-}
 
-
-/* Mobile and Tablet */
+/* --- Mobile and Tablet --- */
 
 @media screen and (max-width: 1024px) {
 }
