--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,7 +10,7 @@
 
 :root {
   --white: #fff;
-  --grey: #2f2f2f;
+  --grey: #757575;
   --black: #000000; 
 }
 
@@ -47,10 +47,10 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 45rem;
+  width: 43rem;
   height: 26rem;
   transform: translate(-50%, -50%);
-  perspective: 1111px;
+  perspective: 1000px;
 }
 
 .card__inner {
@@ -72,7 +72,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  box-shadow: 3px 3px 7px 0 var(--grey);
+  box-shadow: 3px 5px 10px 0 var(--grey);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   overflow: hidden;
