--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,9 @@
         <div class="card__face card__face--back">
           <p class="small-par"> <%- bio %> </p>
           <section class="socials-buttons">
-            <img src="../images/shuffle.svg" alt="Shuffle">
-            <img src="../images/previous.svg" alt="Previous">
-            <img src="../images/next.svg" alt="Next">
+            <a href="https://github.com/your-github-profile"><img src="../images/github-icon.png" alt="GitHub"></a>
+            <a href="https://instagram.com/your-instagram-profile"><img src="../images/instagram-icon.png" alt="Instagram"></a>
+            <a href="https://linkedin.com/your-linkedin-profile"><img src="../images/linkedin-icon.png" alt="LinkedIn"></a>
           </section>
         </div>
       </div>
